--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.13",
     "@types/jasmine": "^4.0.3",
     "@types/morgan": "^1.9.3",
+    "@types/pg": "^8.6.5",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
@@ -33,9 +34,11 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-rate-limit": "^6.5.1",
     "helmet": "^5.1.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.7.3"
   }
 }
