--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint:fix": "eslint src/**/*.ts --fix"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jasmine": "^4.0.3",
     "@types/morgan": "^1.9.3",
@@ -35,6 +36,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "db-migrate": "^0.11.13",
     "db-migrate-pg": "^1.2.2",
     "dotenv": "^16.0.1",
