--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "start": "npm run build && node dist/index.js",
-    "test": "npm run build && jasmine",
+    "test": "export NODE_ENV=test && tsc && db-migrate up --env test && tsc && jasmine && db-migrate reset",
     "migration:run": "db-migrate up",
     "format": "prettier --write src/**/*.ts",
     "lint": "eslint src/**/*.ts",
